--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
     "electron": "^1.8.1"
   },
   "dependencies": {
-    "angular": "^1.6.1"
+    "angular": "^1.6.1",
+    "angular-component-router-active": "0.0.6",
+    "angular1-component-router": "^1.0.0"
   },
   "scripts": {
     "start": "electron ."
