--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-component-router-active": "0.0.6",
+    "angular-route": "^1.6.8",
     "angular1-component-router": "^1.0.0"
   },
   "scripts": {
